[gd_scene load_steps=7 format=2]

[ext_resource path="res://actors/environments/Ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/environments/Negacrown.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/balls/negacrown.png" type="Texture" id=3]
[ext_resource path="res://combat/traits/Waiter.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Charge"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 10, 10 ), Vector2( -10, 0 ), Vector2( 10, -10 ), Vector2( -10, 0 ), Vector2( -10, 0 ), Vector2( 0, 0 ), Vector2( 10, -10 ), Vector2( -10, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 10, 10 ), Vector2( 10, -10 ), Vector2( 20, 15 ), Vector2( -10, 0 ), Vector2( -10, 0 ), Vector2( 10, -10 ), Vector2( -10, 0 ), Vector2( 30, 10 ), Vector2( -20, -30 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 1.4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Glow:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 2.5, 2.5 ), Vector2( 4, 4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Glow:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.509804 ), Color( 1, 0, 0, 0.509804 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Dash"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Glow:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0.509804 ), Color( 1, 1, 1, 0.509804 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Glow:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.5, 2.5 ) ]
}

[node name="Negacrown" instance=ExtResource( 1 )]
script = ExtResource( 2 )
type = "negacrown"

[node name="Waiter" parent="." index="0" instance=ExtResource( 4 )]

[node name="Sprite" parent="." index="5"]
texture = ExtResource( 3 )

[node name="ChargeTimer" type="Timer" parent="." index="7"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="8"]
anims/Charge = SubResource( 1 )
anims/Dash = SubResource( 2 )

[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
